// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linked key 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.message(\\"name\\")(ctx), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`linked list 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.message(ctx.interpolate(ctx.list(0)))(ctx), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`linked modifier 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.modifier(\\"upper\\")(ctx.message(\\"name\\")(ctx)), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`linked named 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.message(ctx.interpolate(ctx.named(\\"name\\")))(ctx), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`list basic 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.interpolate(ctx.list(0)), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`list multiple 1`] = `
"function __msg__ (ctx) {
  return [
    ctx.interpolate(ctx.list(0)), \\" \\", ctx.interpolate(ctx.list(1)), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`named basic 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx.interpolate(ctx.named(\\"name\\")), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`named multiple 1`] = `
"function __msg__ (ctx) {
  return [
    ctx.interpolate(ctx.named(\\"greeting\\")), \\" \\", ctx.interpolate(ctx.named(\\"name\\")), \\" !\\"
  ].join(\\"\\")
}"
`;

exports[`plural complex 1`] = `
"function __msg__ (ctx) {
  return [
    ctx.modifier(\\"caml\\")(ctx.message(\\"no apples\\")(ctx)), [
      ctx.interpolate(ctx.list(0)), \\" apple\\"
    ].join(\\"\\"), [
      ctx.interpolate(ctx.named(\\"n\\")), \\"　apples\\"
    ].join(\\"\\"), \\"\\"
  ][ctx.pluralRule(ctx.pluralIndex, 3, ctx.locale, ctx.orgPluralRule)]
}"
`;

exports[`plural simple 1`] = `
"function __msg__ (ctx) {
  return [
    \\"no apples\\", \\"one apple\\", \\"too much apples  \\", \\"\\"
  ][ctx.pluralRule(ctx.pluralIndex, 3, ctx.locale, ctx.orgPluralRule)]
}"
`;

exports[`text basic 1`] = `
"function __msg__ (ctx) {
  return \\"hello world\\"
}"
`;

exports[`text multline 1`] = `
"function __msg__ (ctx) {
  return \\"hello\\\\n world\\"
}"
`;
